# docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  internal.Segment:
+  domain.Segment:
     properties:
       id:
         type: integer
@@ -10,15 +10,15 @@ definitions:
       ttl:
         type: string
     type: object
-  internal.UpdateRequest:
+  domain.UpdateRequest:
     properties:
       segments_add:
         items:
-          $ref: '#/definitions/internal.Segment'
+          $ref: '#/definitions/domain.Segment'
         type: array
       segments_del:
         items:
-          $ref: '#/definitions/internal.Segment'
+          $ref: '#/definitions/domain.Segment'
         type: array
       user_id:
         type: integer
@@ -33,7 +33,7 @@ info:
   title: API
   version: "1.0"
 paths:
-  /api/service/segment:
+  /api/segment:
     post:
       consumes:
       - application/json
@@ -47,7 +47,7 @@ paths:
         in: body
         name: segment_attrs
         schema:
-          $ref: '#/definitions/internal.Segment'
+          $ref: '#/definitions/domain.Segment'
       produces:
       - application/json
       responses:
@@ -60,7 +60,7 @@ paths:
       summary: create a new segment
       tags:
       - Segment
-  /api/service/segment/{id}:
+  /api/segment/{id}:
     delete:
       consumes:
       - application/json
@@ -87,7 +87,7 @@ paths:
       summary: delete a new segment
       tags:
       - Segment
-  /api/service/user/get/{user_id}:
+  /api/user/get/{user_id}:
     get:
       description: Get list of user`s segments.
       parameters:
@@ -110,7 +110,7 @@ paths:
       summary: Get list
       tags:
       - User
-  /api/service/user/get_history:
+  /api/user/get_history:
     get:
       consumes:
       - application/json
@@ -143,7 +143,7 @@ paths:
       summary: get file with history
       tags:
       - User
-  /api/service/user/update:
+  /api/user/update:
     patch:
       consumes:
       - application/json
@@ -153,7 +153,7 @@ paths:
         in: body
         name: segment_attrs
         schema:
-          $ref: '#/definitions/internal.UpdateRequest'
+          $ref: '#/definitions/domain.UpdateRequest'
       produces:
       - application/json
       responses:
